--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@fullcalendar/timegrid": "^6.1.10",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "daisyui": "^4.4.20",
     "dotenv": "^16.3.1",
     "fullcalendar": "^6.1.10",
+    "nodemailer": "^6.9.8",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
